examples/datalog/15_arithmetic/20_modulo_negative.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_mod_neg
Knowledge graph 'test_mod_neg' created.
Switched to knowledge graph: test_mod_neg
> .kg use test_mod_neg
Switched to knowledge graph: test_mod_neg
> +numbers[(-7,), (-5,), (0,), (5,), (7,)].
Inserted 5 fact(s) into 'numbers'.
> mod_result(X, Y) :- numbers(X), Y = X ?- mod_result(X, Y).
Script error: Parse error: Invalid term: 'X ?- mod_result(X, Y)'
